you can now use metatron as a standard cli program to run scripts. it can reiceve and output data for piping within a larger terminal command. Lots of good work on dr-stynx.os demo app. have a thread that checks a glances api for gpu usage and detrmines if the ai is aleep or not. it can then connect to lm-studio ... and thats how far I've gotten thus far.